# sqlserver-semantic-mcp

./: .env.example  .gitignore  LICENSE  README.md  README.zh-TW.md  pyproject.toml
config/: policy.example.json
sqlserver_semantic_mcp/: config.py  main.py
sqlserver_semantic_mcp/domain/: enums.py
sqlserver_semantic_mcp/infrastructure/: background.py  connection.py
sqlserver_semantic_mcp/policy/: analyzer.py  enforcer.py  loader.py  models.py
sqlserver_semantic_mcp/server/: app.py  compact.py
sqlserver_semantic_mcp/services/: metadata_service.py  metrics_service.py  object_service.py  policy_service.py  query_service.py  relationship_service.py  semantic_service.py
sqlserver_semantic_mcp/workflows/: __init__.py  bundle.py  contracts.py  discovery_flow.py  facade.py  query_flow.py  recommendations.py  router.py
tests/: conftest.py
tests/integration/: test_live_warmup.py
tests/unit/: test_audit_fixes.py  test_background.py  test_bundle.py  test_cache_store.py  test_compact.py  test_config.py  test_connection.py  test_domain_models.py  test_list_resources.py  test_main_imports.py  test_metadata_service.py  test_object_service.py  test_object_tool.py  test_policy_analyzer.py  test_policy_enforcer.py  test_policy_loader.py  test_policy_service.py  test_query_flow.py  test_query_service.py  test_relationship_service.py  test_semantic_cache.py  test_semantic_service.py  test_server_wiring.py  test_startup_modes.py  test_structural_cache.py  test_tool_profile.py  test_tool_recommendations.py  test_workflow_router.py
(+33 files in other folders)
